# civic-remediation

./: .env.example  AGENTS.md  LICENSE  README.md  debug_langwatch.py  docker-compose.yml  prompts.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  idea.yml
app/: agent_os_server.py  knowledge.py  main.py  serve.py  team.py  workflow.py
app/agents/: analyst.py  auditor.py  base.py  bureaucrat.py  coordinator.py  engineer.py  investigator.py  liaison.py  sentinel.py  strategist.py
prompts/: analyst.yaml  engineer.yaml  liaison.yaml  sentinel.yaml  strategist.yaml
tests/: conftest.py
tests/scenarios/: test_pipeline.py  test_team.py
